Fix USP spacing.

--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -459,6 +459,11 @@ FOOTER
 .college-portrait-logo {
   padding-top: 59px;
 }
+.footer-links {
+  @media #{$large-only} {
+    padding-left: 0;
+  }
+}
 /******************************************************************
 END FOOTER
 ******************************************************************/
